syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./pkg/orderservice_fd;orderservice_fd";

service OrderServiceFD {
  rpc UpdateOrder(UpdateOrderMessage) returns (google.protobuf.Empty) {}
}

message UpdateOrderMessage {
  string OrderUUID = 1;
  int64 Status = 2;
}
