syntax = "proto3";
import "google/protobuf/timestamp.proto";

option go_package = "./pkg/userservice";

service UserService {
  rpc CreateUser(User) returns (UserState) {}
}

message User {
  string UUID = 1;
  string Name = 2;
  string Address = 3;
  int64 PhoneNumber = 4;
  google.protobuf.Timestamp Birthday = 5;
}

message UserState {
  bool Success = 1;
  string Error = 2;
}
